--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,44 @@
 *{
-    margin: auto;
-    padding: auto;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
+
+.flex{
+    display: flex;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+.align-center{
+    align-items: center;
+}
+
+header{    
+    background-color: #0084FD;
+    color: white;
+    width: 100%;
+    padding: 10px 0;
+}
+
+.nav-container{
+    width: 90%;  
+    margin: auto;  
+}
+
+ul button{
+    border-radius: 10px;
+    padding: 5px;
+}
+
+ul li{
+    margin: 0px 5px;
+}
+
 
 /************************************************
                     RESPONSIVE
  ************************************************/
- 
