--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,18 @@ ul button{
     padding: 5px;
 }
 
-ul li{
-    margin: 0px 5px;
-}
+
+
+
 
 
 /************************************************
                     RESPONSIVE
  ************************************************/
+
+
+ @media screen and (max-width: 768px){
+    .nav-list{
+        display: none;
+    }
+}
