--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ ul li{
 .apple-btn{
     background-color: #0084FD;
     color: white;
-    padding: 10px 20px;
+    padding: .5rem 3rem;
     border-radius: 20px;
     border: none;
     margin: 20px 0;
@@ -81,6 +81,7 @@ ul li{
 
 .blue-card p{
     padding: 20px;
+    text-align: left;
 }
 
 .blue-icon{
@@ -102,6 +103,9 @@ ul li{
     .nav-list{
         display: none;
     }
+
+
+
 }
 
 /* DESKTOP */
@@ -110,4 +114,28 @@ ul li{
     .burger{
         display: none;
     }
+
+    .columns{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .top-cards{
+       display: flex;
+       justify-content: space-between;
+    }
+
+    .blue-card{
+        flex-basis: 30%;
+    }
+
+    .top-cards .app{
+        flex-basis: 60%;
+    }
+
+    
+
+
+  
 }
