--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     list-style-type: none;
 }
 
+img{
+    width: 100%;
+}
+
 .flex{
     display: flex;
 }
@@ -96,6 +100,42 @@ ul li{
 
 .bg-purple{
     background-color: #9593E6;
+    padding: 20px;
+}
+
+.planning{
+    color: white;
+    padding: 30px 0;
+    line-height: 1rem;
+}
+
+.planning-text{
+    font-size: 1.6rem;
+    padding: 40px 0;
+    font-weight: bold;
+}
+
+.development{
+    background-color: white;
+    border-radius: 30px;
+    padding: 15%;
+    text-align: center;
+
+    
+}
+
+.development-text{
+    font-weight: bold;
+    font-size: 1.6rem;
+    padding: 40px 0;
+}
+
+.development-btn{
+    background-color: #9593E6;
+    border-radius: 50%;
+    padding: 15px;
+    margin: 10px;
+    border: none;
 }
 
 
