--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ ul li{
 .development{
     background-color: white;
     border-radius: 30px;
-    padding: 15%;
+    padding: 10px;
     text-align: center;
 
     
@@ -136,6 +136,10 @@ ul li{
     padding: 15px;
     margin: 10px;
     border: none;
+}
+
+.development p{
+    font-style: italic;
 }
 
 
@@ -188,6 +192,12 @@ ul li{
 /* DESKTOP */
 
 @media screen and (min-width: 1024px) {
+
+    .container{
+        width: 70%;
+        margin: 0 auto;
+    }
+
     .app{
         display: flex;    
     }
@@ -197,6 +207,20 @@ ul li{
         
     }
 
-    
 
+    .bg-purple img{
+        width: 60%;
+        margin: auto;
+
+    } 
+
+    .planning{
+        flex-shrink: ;
+    }
+
+    .development{
+        flex-shrink: 1.3;
+        position: relative;
+        bottom: 0;
+    }
 }
