--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,13 +214,13 @@ ul li{
 
     } 
 
-    .planning{
-        flex-shrink: ;
+
+    .bg-purple .container{
+        display: flex;
     }
 
     .development{
-        flex-shrink: 1.3;
-        position: relative;
-        bottom: 0;
+        width: 80%;
+        
     }
 }
