--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,13 +215,16 @@ ul li{
     } 
 
 
+    .planning{
+        width: 100%;
+    }
+
     .bg-purple .container{
         display: flex;
     }
 
     .development{
         width: 80%;
-    
-        margin-top: 8rem;
+        margin-top: 9rem;
     }
 }
