--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ ul li{
 .testimonial-card{
     background-color: #9593E6;
     color: white;
-    border-radius: 15%;
+    border-radius: 30px;
     text-align: center;
     padding: 10px;
     margin: 20px 0;
@@ -195,6 +195,7 @@ ul li{
     .nav-list{
         display: none;
     }
+
 
 
 
@@ -227,6 +228,10 @@ ul li{
         flex-basis: 65%;
     }
   
+    .testimonial-card{
+        display: flex;
+    }
+
 }
 
 /* DESKTOP */
@@ -267,4 +272,6 @@ ul li{
         width: 80%;
         margin-top: 9rem;
     }
+
+  
 }
