--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,16 @@ ul li{
         display: flex;
     }
 
+    .big-container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .benefits-card{
+        flex-basis: 45%;
+        margin: 10px;
+    }
+
 }
 
 /* DESKTOP */
