--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,5 +325,14 @@ ul li{
         margin-top: 9rem;
     }
 
+    .big-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .benefits-card{
+        flex-basis: 30%;
+    }
   
 }
