--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ ul li{
     border: none;
 }
 
-.about-cit{
+.about-bottom{
     width: 40%;
     margin: 0;
     text-align: start;
@@ -266,13 +266,12 @@ ul li{
                     RESPONSIVE
  ************************************************/
 
- /* TABLET */
+ /* MOBILE */
 
  @media screen and (max-width: 767px){
     .nav-list{
         display: none;
     }
-
 
 
 
@@ -317,6 +316,16 @@ ul li{
     .benefits-card{
         flex-basis: 45%;
         margin: 10px;
+    }
+
+    .about-us{
+        display: flex;
+    }
+
+
+    .about-top{
+        flex-basis: 50%;
+        margin: 1rem;
     }
 
 }
