--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,8 @@ ul li{
 .testimonial-text p{
     font-size: 1rem;
     padding: 20px;
+    text-align: center;
+    margin: auto;
 }
 
 .testimonial-text div{
@@ -180,6 +182,7 @@ ul li{
     text-align: center;
     padding: 10px;
     margin: 20px 0;
+    width: 100%;
 }
 
 .testimonial-img img{
@@ -324,6 +327,16 @@ footer{
     padding: 20px;
 }
 
+footer p{
+    padding: 20px;
+    line-height: normal;
+}
+
+footer a{
+    text-decoration: underline;
+    color: #9593E6;
+}
+
 /************************************************
                     RESPONSIVE
  ************************************************/
@@ -409,8 +422,6 @@ footer{
         align-self: flex-end;
         display: block;
     }
-
-
 
 
     .bg-purple img{
