--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,9 +242,14 @@ ul li{
 
 .about-text{
     color: #9593E6;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bolder;
     margin: 20px 0;
+}
+
+.help-text{
+    white-space: nowrap;
+    padding: 10px 0;
 }
 
 .about-img img{
