--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,6 +452,10 @@ footer a{
         display: block;
     }
 
+    .started{
+        width: 50%;
+        margin: auto;
+    }
 
     .bg-purple img{
         width: 60%;
